<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".TaskCreationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_primary"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tbTaskCreation"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:tooltipText="@string/abTaskCreationName" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/paddingTaskCreation">

        <Spinner
            android:id="@+id/spTaskCreationCliente"
            android:layout_width="@dimen/spClienteWidth"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown">

        </Spinner>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTaskCreationTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tieTaskCreationTitulo"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTaskCreationDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tieDescripcionHeight"
                android:gravity="top"
                android:hint="@string/tieTaskCreationDescripcion"
                android:inputType="text"
                tools:ignore="MissingConstraints" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/paddingTaskCreation"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Spinner
                    android:id="@+id/spHoraITaskCreation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/paddingTaskCreation">

                </Spinner>

                <Spinner
                    android:id="@+id/spHoraFTaskCreation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Spinner>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTaskCreationFecha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieTaskCreationFecha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/tieTaskCreationFecha"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnTaskCreationAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            android:text="@string/btnTaskCreationAdd" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>